Auth working & frontend can now get access token

--- a/VSCode/public/index.html
+++ b/VSCode/public/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vscode</title>
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="stylesheet" href="./screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <script src="/main.js" charset="utf-8"></script>
+    <div ng-app="main" ng-controller="mainController">
+      <form ng-submit="login()">
+        <input type="text" ng-model="username">
+        <input type="password" ng-model="password">
+        <button>Login</button>
+      </form>
+
+    </div>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="./main.js" charset="utf-8"></script>
   </body>
 </html>
