--- a/VSCode/public/index.html
+++ b/VSCode/public/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vscode</title>
-    <link rel="stylesheet" href="./screen.css">
-  </head>
-  <body>
-    <div ng-app="main" ng-controller="mainController">
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Vscode</title>
+  <link rel="stylesheet" href="./screen.css">
+</head>
+
+<body ng-app="main">
+
+  <div ng-controller="mainController">
+
+    <h1>Login</h1>
+    <div>
       <form ng-submit="login()">
         <input type="text" ng-model="username">
         <input type="password" ng-model="password">
+        
         <button>Login</button>
       </form>
-
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-    <script src="./main.js" charset="utf-8"></script>
-  </body>
+
+  </div>
+
+  <div ng-controller="signupController">
+
+    <h1>Signup</h1>
+    <form class="form-login" role="form">
+      <h2 class="form-login-heading">Sign up</h2>
+
+      <input type="text" class="form-control" placeholder="Username" data-ng-model="registration.userName" required autofocus>
+      <input type="password" class="form-control" placeholder="Password" data-ng-model="registration.password" required>
+      <input type="password" class="form-control" placeholder="Confirm Password" data-ng-model="registration.confirmPassword" required>
+
+      <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="signUp()">Submit</button>
+
+      <div data-ng-hide="message == ''" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
+        {{message}}
+      </div>
+    </form>
+
+  </div>
+
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.7.1/angular-local-storage.js"></script>
+  <script src="./main.js" charset="utf-8"></script>
+</body>
+
 </html>
