--- a/VSCode/public/index.html
+++ b/VSCode/public/index.html
@@ -17,9 +17,13 @@
       <form ng-submit="login()">
         <input type="text" ng-model="username">
         <input type="password" ng-model="password">
-        
+
         <button>Login</button>
       </form>
+    </div>
+
+    <div ng-repeat="contact in contacts track by $index">
+      {{contact}}
     </div>
 
   </div>
